Finalized backend structure and initial tests

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,8 +4,10 @@
   "description": "Backend server for Shi Shi Kokoro Property Management, integrating Stripe for payment processing.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "keywords": [
     "property management",
@@ -27,5 +29,17 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
