--- a/.vscode/Backend/package.json
+++ b/.vscode/Backend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.0.1",
     "react-scripts": "^5.0.1",
+    "stripe": "^17.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
